# MinesweeperVariants

./: .gitignore  .gitmodules  DEPLOYMENT_SUCCESS.md  README.md  README_PUZZLE_EXAMPLE.md  README_zh-CN.md  botserver.bat  img.bat  pck.bat  project.txt  pyproject.toml  run.bat
.github/agents/: rule-implementation.agent.md  rule-supervisor.agent.md
.github/workflows/: publish.yml
docs/: DEPLOYMENT_GUIDE.md
minesweepervariants/: __init__.py  __main__.py  board.py  immutable_dict.py  json_object.py  position.py  position_set.py  size.py
minesweepervariants/abs/: Brule.py  Lrule.py  Mrule.py  Rrule.py  board.py  board_set.py  boardv2.py  dye.py  rule.py
minesweepervariants/config/: config.py  default.yaml
minesweepervariants/doc/dev/: detailed.txt  overview.txt  rule_clue.md  rule_mines.md
minesweepervariants/impl/: impl_obj.py
minesweepervariants/impl/board/dye/: __init__.py  cl.py  q.py
minesweepervariants/impl/board/version2/: board.py
minesweepervariants/impl/board/version3/: __init__.py  board.py
minesweepervariants/impl/boardv2/: square_board.py
minesweepervariants/impl/summon/: __init__.py  game.py  solver.py  solverv2.py  summon.py
minesweepervariants/impl/widget/: __init__.py
minesweepervariants/locale/en_US/LC_MESSAGES/: minesweepervariants.po
minesweepervariants/scripts/: api.py  client_example.py  game.py  generate_game.py  generate_puzzle.py  generate_test.py  hint.py  img.py  ocr.py
minesweepervariants/server/: format.py
minesweepervariants/utils/: convert_images_to_rgba.py  dump.py  i18n.py  image_create.py  image_template.py  impl_obj.py  tool.py  value_template.py
minesweepervariants/utils/ocr/: detect.py  ocr.py  ocr_assets.py
(+1 files in other folders)
