[project]
name = "minesweepervariants"
dynamic = ["version"]
description = ""
authors = [
    {name = "Minesweepervariants-Fanmade(Organization)", email = "Minesweepervariants-Fanmade@outlook.com"},
    {name = "WuZh-Rh", email = "you@example.com"},
    {name = "KoolShow", email = "51787949+KoolShow@users.noreply.github.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13,<3.16"
dependencies = [
    "pydantic>=2.13.4",
    "zstandard>=0.25.0",
    "ortools>=9.13.4784",
    "frozendict>=2.4.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "ipython>=9.4.0",
    "jurigged @ git+https://github.com/Minesweepervariants-Fanmade/jurigged.git@0.6.1-dev",
]


[tool.basedpyright]
typeCheckingMode = "strict"
reportExplicitAny = "warning"
reportUnnecessaryCast = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportUnnecessaryIsInstance = "information"
# reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportCallInDefaultInitializer = "error"

[project.optional-dependencies]
image = ["pillow>=11.3.0,<11.4.0"]
server = [
    "flask>=3.1.2,<4.0.0",
    "flask-cors>=6.0.1,<7.0.0",
    "waitress>=3.0.2,<3.1.0",
    "orjson>=3.11.2,<4.0.0",
    "requests>=2.28.0,<3.0.0"
]

[build-system]
requires = ["hatchling>=1.26.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.uv]
cache-keys = [
    { file = ".git/HEAD" }
]